--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,3 @@
-<!--
-/*!
-
-=========================================================
-* BLK Design System PRO React - v1.2.1
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/blk-design-system-pro-react
-* Copyright 2022 Creative Tim (https://www.creative-tim.com)
-
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-*/
-
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -48,7 +29,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800"
       rel="stylesheet"
     />
-    <title>BLK Design System PRO React by Creative Tim</title>
+    <title>MJM Developer</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
   </head>
   <body>
