--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script> -->
     <!--     Fonts and icons     -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800"
       rel="stylesheet"
     />
     <title>MJM Developer</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
